<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Shortcut to activate Panic Mode -->
    <shortcut
        android:shortcutId="activate_panic_mode"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_alert"
        android:shortcutShortLabel="@string/shortcut_panic_short"
        android:shortcutLongLabel="@string/shortcut_panic_long"
        android:shortcutDisabledMessage="@string/shortcut_panic_disabled">
        <intent
            android:action="com.fourpeople.adhoc.action.ACTIVATE_PANIC_MODE"
            android:targetPackage="com.fourpeople.adhoc"
            android:targetClass="com.fourpeople.adhoc.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    
    <!-- Shortcut to activate Emergency Communication Mode -->
    <shortcut
        android:shortcutId="activate_emergency_mode"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_info"
        android:shortcutShortLabel="@string/shortcut_emergency_short"
        android:shortcutLongLabel="@string/shortcut_emergency_long"
        android:shortcutDisabledMessage="@string/shortcut_emergency_disabled">
        <intent
            android:action="com.fourpeople.adhoc.action.ACTIVATE_EMERGENCY_MODE"
            android:targetPackage="com.fourpeople.adhoc"
            android:targetClass="com.fourpeople.adhoc.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    
</shortcuts>
